# birdepy.github.io

./: .buildinfo  README.md  api_cuda_probabilities.html  api_cuda_simulate.html  api_estimate.html  api_forecast.html  api_probability.html  api_simulate_continuous.html  api_simulate_discrete.html  contact.html  contributing.html  cuda_user_guide.html  estimation.html  forecasting.html  genindex.html  index.html  license.html  objects.inv  probabilities.html  processes.html  pyproject.toml  release_notes.html  reporting_bugs.html  search.html  searchindex.js  simulation.html
.doctrees/: api_cuda_probabilities.doctree  api_cuda_simulate.doctree  api_estimate.doctree  api_forecast.doctree  api_probability.doctree  api_simulate_continuous.doctree  api_simulate_discrete.doctree  contributing.doctree  environment.pickle  estimation.doctree  forecasting.doctree  index.doctree  probabilities.doctree  processes.doctree  release_notes.doctree  simulation.doctree
_sources/: api_cuda_probabilities.rst.txt  api_cuda_simulate.rst.txt  api_estimate.rst.txt  api_forecast.rst.txt  api_probability.rst.txt  api_simulate_continuous.rst.txt  api_simulate_discrete.rst.txt  contact.rst.txt  contributing.rst.txt  cuda_user_guide.rst.txt  estimation.rst.txt  forecasting.rst.txt  index.rst.txt  license.rst.txt  probabilities.rst.txt  processes.rst.txt  release_notes.rst.txt  reporting_bugs.rst.txt  simulation.rst.txt
_static/css/: custom.css
source/: conf.py  index.rst  probabilities.rst  release_notes.rst
